RESOLVED FIXED228340
[iOS] REGRESSION: Tapping a <select> element does not show a menu on many websites
https://bugs.webkit.org/show_bug.cgi?id=228340
Summary [iOS] REGRESSION: Tapping a <select> element does not show a menu on many web...
Aditya Keerthi
Reported 2021-07-27 13:06:03 PDT
...
Attachments
Patch (8.33 KB, patch)
2021-07-27 13:08 PDT, Aditya Keerthi
no flags
Aditya Keerthi
Comment 1 2021-07-27 13:08:11 PDT
Aditya Keerthi
Comment 2 2021-07-27 13:08:32 PDT
EWS
Comment 3 2021-07-27 16:30:49 PDT
Committed r280359 (240006@main): <https://commits.webkit.org/240006@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 434308 [details].
Note You need to log in before you can comment on or make changes to this bug.