Source/WebKit/UIProcess/ios/forms/WKFormPeripheralBase.h
@@ -44,6 +44,7 @@
 @property (nonatomic, readonly) WKContentView *view;
 @property (nonatomic, readonly) NSObject <WKFormControl> *control;
 @property (nonatomic, readonly, getter=isEditing) BOOL editing;
+@property (nonatomic) BOOL singleTapShouldEndEditing;
 
 @end
 
